test/must_fail/api/must_fail_terminal_colors.ngjs
#!/usr/bin/env ngspicejs
// no arg needed
// linter: ngspicejs-lint
"use strict";

terminal_colors(1);
